feature/ create properties CRUD
