# routes/index.js
@@ -4,6 +4,10 @@ const swaggerDocument = require("../swagger-output.json");
 const utilities = require("../utilities/index");
 const passport = require('passport');
 
+//Properties Route
+router.use('/properties', require('./properties'))
+
+
 // Swagger routes
 router.use('/api-docs', swaggerUi.serve);
 router.get('/api-docs', swaggerUi.setup(swaggerDocument));
